change css, and chane top , add bootstrap

--- a/web/Administration/css/Admin_topcss.css
+++ b/web/Administration/css/Admin_topcss.css
@@ -1,69 +1,127 @@
-body{
-
-
-
-}
-#masthead{
+.top-nav {
     position: relative;
-    width: 100%;
+    padding: 1em 0;
 }
 
-/************* globalNav styles ****************/
-#globalNav{
+/*--header--*/
+div#bs-example-navbar-collapse-1 {
+    padding: 0;
+}
+nav.navbar.navbar-default {
+    background: none;
+    border: none;
+    margin: 0;
+}
+ul.nav.navbar-nav {
+    margin-top: 1em;
+}
+.navbar-nav li {
+    margin: 0 1em;
+}
+.navbar-nav li:nth-child(1){
+    margin-left: 0;
+}
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    color: #F35B5B;
+    outline: none;
+}
+/*--Effect 5: same word slide in-- */
+.cl-effect-5 li a {
+    overflow: hidden;
+    line-height: 40px;
+    padding: 0 8px 0 0;
+    font-size: 1.2em;
+}
+.cl-effect-5 li a span {
     position: relative;
-    width: 80%;
-    min-width: 640px;
-    height: 30px;
-    color: #cccccc;
-    padding: 0px;
-    margin: 0px;
-    background-image: url(glbnav_background.gif);
+    display: inline-block;
+    -webkit-transition: -webkit-transform 0.3s;
+    -moz-transition: -moz-transform 0.3s;
+    transition: transform 0.3s;
 }
-#globalNav img{
-    margin-bottom: -10px;
-}
-#globalLink{
+.cl-effect-5 li a span::before {
     position: absolute;
-    top: 8px;
-    height: 25px;
-    min-width: 640px;
-    padding: 2px;
-    margin: 0px;
-    left: 10px;
-    z-index: 100;
+    top: 100%;
+    content: attr(data-hover);
+    -webkit-transform: translate3d(0,0,0);
+    -moz-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
-a.glink, a.glink:visited{
-    font-size: 20px;
-    color: rgba(66, 133, 244, 0.56);
-    font-weight: bold;
-    margin: 0px;
-    padding: 2px 15px 5px 10px;
-    border-right: 1px solid #8FB8BC;
-    font-family:"Microsoft YaHei";
-}
-a.glink:hover{
-    background-image: url(glblnav_selected.gif);
-    text-decoration: none;
-}
-.skipLinks {display: none;}
 
-
-/************ subglobalNav styles **************/
-.subglobalNav{
+.cl-effect-5 li a:hover span,
+.cl-effect-5 li a:focus span,.cl-effect-5 li a.active span {
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    transform: translateY(-100%);
+    color:#F35B5B;
+}
+/*--search-button--*/
+form.navbar-form.navbar-right {
+    margin: 0;
+    padding: 0;
+}
+.form-group {
+    position: relative;
+}
+.top-nav input.form-control {
+    padding: 8px 35px 8px 10px;
+    height: inherit;
+    font-size: 1em;
+    border: none;
+    border-bottom: 1px solid;
+    -webkit-appearance: none;
+    color: #000;
+    background: none;
+    box-shadow: none;
+    border-radius: 0;
+}
+.top-nav button.btn.btn-default {
+    border: none;
+    width: 35px;
+    height: 35px;
     position: absolute;
-    top: 60px;
-    left: 0px;
-    /*width: 100%;*/
-    min-width: 640px;
-    height: 20px;
-    padding: 0px 0px 0px 10px;
-    visibility: hidden;
-    color: #ffffff;
+    top: 6%;
+    right: 0;
+    padding: 0;
+    outline: none;
+    box-shadow: none;
+    background: none;
 }
-.subglobalNav a:link, .subglobalNav a:visited {
-    font-size: 80%;
-    color: #ffffff;
+button.btn.btn-default:focus {
+    background-color: inherit !important;
+    box-shadow: none !important;
+    border: none !important;
+    outline: none;
 }
-.subglobalNav a:hover{
-    color: #cccccc;
+.form-control:focus {
+    border-color: #4B307F;
+    box-shadow:none;
 }
+span.glyphicon.glyphicon-search {
+    font-size: 1.5em;
+    color: #01553D;
+}
+span.glyphicon.glyphicon-search:focus {
+    outline: none;
+}
+/*--logo--*/
+.top-nav {
+    position: relative;
+    padding: 1em 0;
+}
+.logo {
+    position: absolute;
+    top: 14%;
+    right: 43%;
+    background-color: rgba(255, 0, 0, 0.52);
+    padding: 0 1em;
+}
+.logo h1 {
+    font-size: 6em;
+    font-family: 'Romanesco-Regular';
+    letter-spacing: 3px;
+}
+.logo h1 a {
+    color: #fff;
+}
+/*--//header--*/
