--- a/web/css/HeaderNav.css
+++ b/web/css/HeaderNav.css
@@ -31,6 +31,10 @@ ul.nav.navbar-nav {
     line-height: 40px;
     padding: 0 8px 0 0;
     font-size: 1.2em;
+
+}
+.navbar-default .navbar-nav>li>a{
+    color: #FF3030;
 }
 .cl-effect-5 li a span {
     position: relative;
@@ -134,6 +138,20 @@ span.glyphicon.glyphicon-search:focus {
     margin-top: 12px;
     margin-left: 10px;
     white-space: nowrap;
+}
+.nav-userinfo{
+    background: #ff411c;
+    border-radius: 20px;
+    color: #fff;
+    line-height: 24px;
+    float: right;
+    padding: 2px 0;
+    margin-top: 12px;
+    margin-left: 10px;
+    white-space: nowrap;
+}
+.nav-userinfo .a{
+
 }
 .nav-account .button{
 display: inline-block;
